added urls fixed bug with transitive dep

--- a/src/app/stack/card-details/card-details.component.html
+++ b/src/app/stack/card-details/card-details.component.html
@@ -5,7 +5,7 @@
         <p [innerText]="details?.titleDescription"></p>
     </div>
     <div class="col-xs-2">
-        <a href="/" title="Sign up with Snyk">
+        <a [href]="registrationLink" title="Sign up with Snyk" target="_blank">
             <span class="power">Powered By </span>
             <img src="../../.././assets/icon/snky-logo.png" alt="snyk-logo" class="logo" />
         </a>
