--- a/src/app/stack/card-details/report-information/report-information.component.html
+++ b/src/app/stack/card-details/report-information/report-information.component.html
@@ -5,7 +5,7 @@
 
     <component-details [genericInformation]="genericInformation" (click)="handleAccordion($event, cdetail)"
         (click)="handleTransitive($event, cdetail)" [serial]="i" [type]="report?.type" [positions]="report?.headers"
-        [compDetails]="cdetail" [repoInfo]="repoInfo" [tabType]="report?.tabType"
+        [compDetails]="cdetail" [repoInfo]="repoInfo" [tabType]="report?.tabType || tabType"
         *ngFor="let cdetail of report?.componentDetails; let i = index;">
     </component-details>
 
