--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -156,7 +156,7 @@
         padding-right: 10px;
         padding-top: 4px;
     }
-    .tsansitive-details {
+    .transitive-details {
         float: left;
         width: 60%;
         text-align: left;
