--- a/src/app/stack/card-details/report-information/report-information.component.html
+++ b/src/app/stack/card-details/report-information/report-information.component.html
@@ -1,4 +1,23 @@
 <div class="analytics-report-information">
+
+    <div class="snyk-box" *ngIf="report?.tabType == 'private'">
+        <span class="col-sm-1">
+            <img src="/assets/icon/snyk-avatar.png" alt="snyk-avatar" class="avatar" />
+        </span>
+        <span class="col-sm-9">
+            Information about vulnerabilities in dependencies is only available after registration for a <b>free</b>
+            Snyk account.
+            <br>
+            Sign up to keep getting these insights and find out more about security risks in your dependencies.
+        </span>
+        <span class="col-sm-2">
+            <a href="https://app.snyk.io/signup/?utm_medium=Partner&utm_source=Red-Hat&utm_campaign=Code-Ready-Analytics-2020"
+                target="_blank"><button class="ripple">Sign up for a free Snyk account</button></a>
+        </span>
+    </div>
+
+
+
     <div *ngIf="report?.componentDetails && report?.componentDetails.length > 0" class="component-detail-headers">
         <div [class]="header.className" *ngFor="let header of report?.headers" [innerText]="header.text"></div>
     </div>
