fixid bug related to logo shrink

--- a/src/app/stack/card-details/card-details.component.less
+++ b/src/app/stack/card-details/card-details.component.less
@@ -18,20 +18,20 @@
     border-top: 2px solid @steelBlue;
 }
 .power {
-    margin-top: 2em;
-    font-size: 1.2em;
+    margin-top: 2.3em;
+    font-size: 1em;
     font-weight: 400;
     color: black;
     margin-left: 1em;
-    float: left;
 }
 .logo {
     margin-top: 1.5em;
     margin-bottom: 1.5em;
-    width: 4.5em;
-    height: 4.5em;
+    width: 4em;
+    height: 4.2em;
     float: left;
 }
 .content-wrapper {
-    align-content: left;
+    display: flex;
+    align-items: flex-start;
 }
